feature/frontend: fix workflows

--- a/.github/workflows/api-inmemory.yml
+++ b/.github/workflows/api-inmemory.yml
@@ -6,9 +6,11 @@ name: Test api-inmemory
 on:
   push:
     branches: ["main"]
+    paths-ignore:
+      - "web/**"
   pull_request:
     branches: ["main"]
-      paths-ignore:
+    paths-ignore:
       - "web/**"
 
 permissions:
