--- a/.github/workflows/api-mongo.yml
+++ b/.github/workflows/api-mongo.yml
@@ -6,13 +6,12 @@ name: Test api-mongo
 on:
   push:
     branches: ["main"]
+    paths-ignore:
+      - "web/**"
   pull_request:
     branches: ["main"]
-      paths-ignore:
+    paths-ignore:
       - "web/**"
-
-permissions:
-  contents: read
 
 jobs:
   build:
