--- a/.github/workflows/bdd-mongo.yml
+++ b/.github/workflows/bdd-mongo.yml
@@ -6,9 +6,11 @@ name: Test bdd-mongo
 on:
   push:
     branches: ["main"]
+    paths-ignore:
+      - "web/**"
   pull_request:
     branches: ["main"]
-      paths-ignore:
+    paths-ignore:
       - "web/**"
 
 permissions:
